unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/pse__VersionItem_ProjectDetail__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__VersionHelp</customHelpPage>
    <description>A capture of project record data taken at the time the version is created.</description>
    <label>Version Item Project Detail</label>
    <nameField>
        <displayFormat>PVD-{0000}</displayFormat>
        <label>Version Item Project Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Version Item Project Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>