unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__AccountId__c.field-meta.xml
<CustomField>
    <fullName>pse__AccountId__c</fullName>
    <description>The ID of the Account listed on the project referenced in the version.</description>
    <inlineHelpText>The ID of the Account listed on the project referenced in the version.</inlineHelpText>
    <label>Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>