unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__AccountName__c.field-meta.xml
<CustomField>
    <fullName>pse__AccountName__c</fullName>
    <description>The account name on the project referenced in the version.</description>
    <inlineHelpText>The account name on the project referenced in the version.</inlineHelpText>
    <label>Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>