unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Billing_Type__c</fullName>
    <description>The billing type on the project referenced in the version.</description>
    <inlineHelpText>The billing type on the project referenced in the version.</inlineHelpText>
    <label>Billing Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>