unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__GroupId__c.field-meta.xml
<CustomField>
    <fullName>pse__GroupId__c</fullName>
    <description>The group ID on the project referenced in the version.</description>
    <inlineHelpText>The group ID on the project referenced in the version.</inlineHelpText>
    <label>Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>