unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__GroupName__c.field-meta.xml
<CustomField>
    <fullName>pse__GroupName__c</fullName>
    <description>The group name on the project referenced in the version.</description>
    <inlineHelpText>The group name on the project referenced in the version.</inlineHelpText>
    <label>Group Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>