unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The active flag on the project referenced in the version.</description>
    <inlineHelpText>The active status on the project referenced in the version.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>