unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>pse__OpportunityName__c</fullName>
    <description>The opportunity name on the project referenced in the version.</description>
    <inlineHelpText>The opportunity name on the project referenced in the version.</inlineHelpText>
    <label>Opportunity Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>