unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__OriginalCreatedByName__c.field-meta.xml
<CustomField>
    <fullName>pse__OriginalCreatedByName__c</fullName>
    <description>The original created by name for the project referenced in the version.</description>
    <inlineHelpText>The original created by name for the project referenced in the version.</inlineHelpText>
    <label>Original Created By Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>