unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__OriginalCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>pse__OriginalCreatedDate__c</fullName>
    <description>The original created date for the project referenced in the version.</description>
    <inlineHelpText>The original created date for the project referenced in the version.</inlineHelpText>
    <label>Original Created Date</label>
    <type>DateTime</type>
</CustomField>