unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__OriginalOwnerId__c.field-meta.xml
<CustomField>
    <fullName>pse__OriginalOwnerId__c</fullName>
    <description>The original owner ID for the project referenced in the version.</description>
    <inlineHelpText>The original owner ID for the project referenced in the version.</inlineHelpText>
    <label>Original Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>