unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__OriginalOwnerName__c.field-meta.xml
<CustomField>
    <fullName>pse__OriginalOwnerName__c</fullName>
    <description>The original owner name for the project referenced in the version.</description>
    <inlineHelpText>The original owner name for the project referenced in the version.</inlineHelpText>
    <label>Original Owner Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>