unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__PracticeId__c.field-meta.xml
<CustomField>
    <fullName>pse__PracticeId__c</fullName>
    <description>The practice ID on the project referenced in the version.</description>
    <inlineHelpText>The practice ID on the project referenced in the version.</inlineHelpText>
    <label>Practice Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>