unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__PracticeName__c.field-meta.xml
<CustomField>
    <fullName>pse__PracticeName__c</fullName>
    <description>The practice name on the project referenced in the version.</description>
    <inlineHelpText>The practice name on the project referenced in the version.</inlineHelpText>
    <label>Practice Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>