unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__Project_ManagerId__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_ManagerId__c</fullName>
    <description>The ID of the project manager listed on the project referenced in the version.</description>
    <inlineHelpText>The ID of the project manager listed on the project referenced in the version.</inlineHelpText>
    <label>Project Manager Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>