unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__Project_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Name__c</fullName>
    <description>The name of the project referenced in the version.</description>
    <inlineHelpText>The name of the project referenced in the version.</inlineHelpText>
    <label>Project Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>