unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Phase__c</fullName>
    <description>The project phase for the project referenced in the version.</description>
    <inlineHelpText>The project phase for the project referenced in the version.</inlineHelpText>
    <label>Project Phase</label>
    <length>200</length>
    <type>Text</type>
</CustomField>