unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__Project_Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Status__c</fullName>
    <description>The project status for the project referenced in the version.</description>
    <inlineHelpText>The project status for the project referenced in the version.</inlineHelpText>
    <label>Project Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>