unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__Project_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Type__c</fullName>
    <description>The project type on the project referenced in version.</description>
    <inlineHelpText>The project type on the project referenced in version.</inlineHelpText>
    <label>Project Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>