unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__RegionId__c.field-meta.xml
<CustomField>
    <fullName>pse__RegionId__c</fullName>
    <description>The region ID on the project referenced in the version.</description>
    <inlineHelpText>The region ID on the project referenced in the version.</inlineHelpText>
    <label>Region Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>