unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__Stage__c.field-meta.xml
<CustomField>
    <fullName>pse__Stage__c</fullName>
    <description>The stage for the project referenced in the version.</description>
    <inlineHelpText>The stage for the project referenced in the version.</inlineHelpText>
    <label>Stage</label>
    <length>200</length>
    <type>Text</type>
</CustomField>