unpackaged/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/pse__Total_Costs__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Costs__c</fullName>
    <description>The total costs on the project referenced in the project.</description>
    <inlineHelpText>The total costs on the project referenced in the project.</inlineHelpText>
    <label>Total Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>